--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <div id="pwd-generator"></div>
+    <div> La tua password è <span id="pwd-generator"></span> </div>
 </body>
 </html>
